--- a/public/manifest.json
+++ b/public/manifest.json
@@ -2,6 +2,6 @@
   "short_name": "Dolar Indicator",
   "name": "React Dolar Indicator",
   "start_url": "./index.html",
-  "display": "standalone",
+  "display": "standalone"
 
 }
